# doc-firewall

./: .gitignore  404.html  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: codeql.yml  docs.yml  fuzzing.yml  pypi-publish.yml  scorecard.yml
api/cli/: index.html
api/docker/: index.html
api/python/: index.html
concepts/architecture/: index.html
concepts/risk-scoring/: index.html
concepts/threats/: index.html
development/benchmarking/: index.html
development/contributing/: index.html
docs/: CNAME  hooks.py  index.md  overview.md
docs/api/: cli.md  docker.md  python.md
docs/concepts/: architecture.md  risk-scoring.md  threats.md
docs/development/: benchmarking.md  contributing.md
docs/features/: antivirus.md  metadata.md  overview.md  watermarks.md
docs/getting-started/: configuration.md  examples.md  installation.md  quickstart.md
docs/javascripts/: brand.js
docs/overrides/: main.html
examples/: 01_basic_scan.py  02_custom_config.py  03_json_output.py  04_yaml_config_scan.py  05_custom_antivirus.py  06_advanced_threat_detection.py  README.md  doc_firewall_config.yaml
examples/docker/: Dockerfile
examples/samples/: T2_0000.docx  T2_vba_0000.docx  T4_0001.docx  T9_hidden_0000.docx  T9_stuff_0000.docx
features/antivirus/: index.html
features/metadata/: index.html
features/overview/: index.html
features/watermarks/: index.html
getting-started/configuration/: index.html
getting-started/examples/: index.html
getting-started/installation/: index.html
overrides/: main.html
overview/: index.html
scripts/: requirements-build.txt
search/: search_index.json
stylesheets/: extra.css
tests/: fuzz-requirements.txt  fuzz_target.py  test_v1_features.py
(+46 files in other folders)
